Add a missing conversation

--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -92,6 +92,19 @@
     <br><br>
 
     <h3>
+    <em>How does the conversion from chord to scale work? Is the root of the chord also the root of the scale?</em>
+    <br><br>
+    A chord derived from a parent mode is an expression of that mode, and inherits the same root. But deriving the mode from the chord is not always as straightforward. There are countless instances where one person will label, say, a GM7 chord, and someone else will call it B minor, and still someone else will call it E minor. In these cases, a triadic chord structure is often inferred from a recording or performance, and then assigned a root note based on the most probable function of that chord in the key.
+    <br><br>
+    When we let go of triads and their functional roots, and instead say that one note of the chord is “emphasized,” the full sound of the parent mode begins to emerge more clearly. Imagine you have a C Major triad, and the “E” is emphasized, either rhythmically, or timbrally, or because it’s in the bass, or because of its amplitude. There would be an argument that this is a <em>phrygian</em> chord, because the broader field of pitches implied by the chord are anchored more strongly to E.
+    <br><br>
+    This way of thinking invites a more nuanced sensitivity to the tonal tensions that comprise a mode, and takes the place of calculating triadic inversions and functional roots. Function emerges as the same feeling of gravity at a higher, “key” level. And of course, what one improviser imagines to be the gravitational center may be different from what another improviser imagines, or from what that same improviser might experience as a listener.
+    </h3>
+    <p><em>Thanks to Stefano Mengozzi for this conversation!</em></p>
+
+    <br><br>
+
+    <h3>
     <em>Isn't something lost when you bring the notes of a triadic extension back down into a scalar octave? How do we reconcile this tension between scalar thinking, which relies on octave equivalence, and triadic extension, which does not?</em>
     <br><br>
     A parent mode (or polymodality) is an idea that <em>precedes</em> that of scale. It’s not a scalar constraint, but a field of pitches, yet unordered, which means they’re also not yet assigned to an octave. So a chord structure, whether triadic or not, can have the essential qualities of its voicing (a “flavor”) that extends beyond a scalar octave, and can still be an expression of “the sound of” a parent mode. It’s as though Russell had said “if you press down <em>all octaves</em> of all notes of the C Major scale at once…”
