--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     var currentVideo = -1;
 
     // Fetch the vids from the database
-    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/player';
+    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/single-shape';
     let promise = fetch(VIDEOS_ENDPOINT)
       .then(response => response.json())
       .then(data => {
