--- a/reading-1/index.html
+++ b/reading-1/index.html
@@ -29,7 +29,7 @@
     var currentVideo = -1;
 
     // Fetch the vids from the database
-    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/tactile-1';
+    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/reading-1';
     let promise = fetch(VIDEOS_ENDPOINT)
       .then(response => response.json())
       .then(data => {
