--- a/reading-4/index.html
+++ b/reading-4/index.html
@@ -29,7 +29,7 @@
     var currentVideo = -1;
 
     // Fetch the vids from the database
-    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/tactile-2';
+    const VIDEOS_ENDPOINT = 'https://api-9q2sw.ondigitalocean.app/reading-4';
     let promise = fetch(VIDEOS_ENDPOINT)
       .then(response => response.json())
       .then(data => {
